name:                Parallel-Concurrent-Programming
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Cmdv/Parallel-Concurrent-Programming#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Orr
maintainer:          info@cmdv.me
copyright:           2018 Author name here
category:            Education
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  files/sudoku17.1000.txt
                     files/sudoku17.16000.txt
                     files/sudoku17.49151.txt
                     src/Chapter03/Kmeans/Makefile
                     -- chanbench.hs
                     -- findpar5.hs
                     -- parlist.hs
                     -- other/correcter.hs
                     -- other/arithgame.hs
                     -- other/game.hs
                     -- other/README
                     -- distrib-db/WorkerSample.hs
                     -- distrib-db/DatabaseSample.hs
                     -- sudoku-par1.hs
                     -- sudoku-par2.hs
                     -- sudoku-par3.hs
                     -- sudoku-par4.hs
                     -- kmeans/Makefile
                     -- timeout2.hs
                     -- parinfer/benchmark.in
                     -- tmvar.hs
                     -- windowman.hs
                     -- ChangeLog.md
                     README.md

-- -----------------------------------------------------------------------------
-- Flags

-- -f llvm: enable -fllvm to GHC; requires LLVM to be installed, but
-- makes the Repa programs faster

flag llvm
  default: False

-- -f devil: Enable the image-maniputation programs, which are
-- disabled by default because they require the devil library which
-- needs to be installed separately.

flag devil
  default: False

-- -f cuda: Build the examples that require accelerate-cuda.  These
-- need the NVidia CUDA tools installed.

flag cuda
  default: False

-- -f-accelerate: Do not build the examples that require accelerate.

flag accelerate
  default : True

-- -f-distributed: Do not build the examples that require distributed-process.

flag distributed
  default : True

-- -f network26: Use network-2.6.  Internal flag; you shouldn't need
-- to change this.

flag network26
  default : True

-- -----------------------------------------------------------------------------
-- CHAPTER 02

executable Parallel-Concurrent-Programming
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable Rpar
  hs-source-dirs:      src/Chapter02
  main-is:             Rpar.hs
  build-depends:       base >= 4.7 && < 5
                     , time
                     , parallel
  ghc-options: -threaded
  default-language: Haskell2010

executable sudoku1
  main-is: sudoku1.hs
  hs-source-dirs: src/Chapter02/Sudoku/
  other-modules: Sudoku
  build-depends:   base >= 4.7 && < 5
                 , parallel
                 , array
  default-language: Haskell2010

executable sudoku2
  main-is: sudoku2.hs
  hs-source-dirs: src/Chapter02/Sudoku/
  other-modules: Sudoku
  ghc-options: -threaded
               -rtsopts
               -eventlog
  build-depends:   base >= 4.7 && < 5
                 , parallel
                 , array
                 , deepseq
  default-language: Haskell2010

executable sudoku3
  main-is: sudoku3.hs
  hs-source-dirs: src/Chapter02/Sudoku/
  other-modules: Sudoku
  ghc-options: -threaded
               -rtsopts
               -eventlog
  build-depends:   base >= 4.7 && < 5
                 , parallel
                 , array
  default-language: Haskell2010

executable sudoku4
  main-is: sudoku4.hs
  hs-source-dirs: src/Chapter02/Sudoku/
  other-modules: Sudoku
  ghc-options: -threaded
  build-depends:   base >= 4.7 && < 5
                 , parallel
                 , array
  default-language: Haskell2010

executable sudoku5
  main-is: sudoku5.hs
  hs-source-dirs: src/Chapter02/Sudoku/
  other-modules: Sudoku
  ghc-options: -threaded
  build-depends:   base >= 4.7 && < 5
                 , parallel
                 , array
  default-language: Haskell2010

-- -----------------------------------------------------------------------------
-- CHAPTER 03

executable strat
  main-is: Strat.hs
  hs-source-dirs: src/Chapter03/
  ghc-options: -threaded
  build-depends:   base >= 4.7 && < 5
                 , parallel
  default-language: Haskell2010

executable strat2
  main-is: Strat2.hs
  hs-source-dirs: src/Chapter03/
  ghc-options: -threaded
  build-depends:   base >= 4.7 && < 5
                 , parallel
  default-language: Haskell2010

executable kmeans
  main-is: kmeans.hs
  hs-source-dirs: src/Chapter03/Kmeans/
  other-modules:   KMeansCore
  ghc-options: -threaded
  build-depends:   base >= 4.7 && < 5
                 , parallel ==3.2.*
                 , time >= 1.4 && < 1.9
                 , deepseq >= 1.3 && < 1.5
                 , monad-par
                 , binary >=0.6.3 && < 0.9
                 , array >= 0.4 && <0.6
                 , bytestring >= 0.9 && < 0.11
                 , vector >= 0.10 && < 0.13
                 , normaldistribution
                 , random
  default-language: Haskell2010

executable GenSamples
  hs-source-dirs: src/Chapter03/Kmeans/
  main-is: GenSamples.hs
  other-modules: KMeansCore
  build-depends:   base >= 4.7 && < 5
                 , binary >=0.6.3 && < 0.9
                 , array >= 0.4 && <0.6
                 , vector >= 0.10 && < 0.13
                 , random >= 1.0 && < 1.2
                 , normaldistribution >= 1.1 && < 1.2
                 , deepseq >= 1.3 && < 1.5
                 , bytestring >= 0.9 && < 0.11
  default-language: Haskell2010

executable rsa
  hs-source-dirs: src/Chapter03/Rsa/
  main-is: rsa.hs
  other-modules: ByteStringCompat
  build-depends:   base >= 4.7 && < 5
                 , bytestring >= 0.9 && < 0.11
                 , deepseq >= 1.3 && < 1.5
  default-language: Haskell2010

executable rsa1
  hs-source-dirs: src/Chapter03/Rsa/
  main-is: rsa1.hs
  other-modules: ByteStringCompat
  build-depends:   base >= 4.7 && < 5
                 , bytestring >= 0.9 && < 0.11
                 , deepseq >= 1.3 && < 1.5
                 , parallel
  default-language: Haskell2010

executable rsa2
  hs-source-dirs: src/Chapter03/Rsa/
  main-is: rsa2.hs
  other-modules: ByteStringCompat
  build-depends:   base >= 4.7 && < 5
                 , bytestring >= 0.9 && < 0.11
                 , deepseq >= 1.3 && < 1.5
                 , parallel
  default-language: Haskell2010

-- -----------------------------------------------------------------------------
-- CHAPTER 04

executable parmonad
  hs-source-dirs: src/Chapter04/
  main-is: parmonad.hs
  build-depends:   base >= 4.7 && < 5
                 , monad-par >= 0.3.4 && < 0.4
  ghc-options: -threaded
  default-language: Haskell2010

executable fwsparse
  main-is: FwSparse.hs
  other-modules: SparseGraph MapCompat
  hs-source-dirs: src/Chapter04/FwSparse/
  build-depends:   base >= 4.7 && < 5
                 , random >= 1.0 && < 1.2
                 , array >= 0.4 && <0.6
                 , containers >= 0.4 && < 0.6
  default-language: Haskell2010

executable fwsparse1
  main-is: FwSparse1.hs
  other-modules: SparseGraph MapCompat
  hs-source-dirs: src/Chapter04/FwSparse/
  build-depends:   base >= 4.7 && < 5
                 , random >= 1.0 && < 1.2
                 , array >= 0.4 && <0.6
                 , containers >= 0.4 && < 0.6
                 , monad-par >= 0.3.4 && < 0.4
                 , deepseq >= 1.3 && < 1.5
  ghc-options: -threaded
  default-language: Haskell2010